Erro de digitação

--- a/planejamento_acoes.html
+++ b/planejamento_acoes.html
@@ -124,7 +124,7 @@
                         <li>Identificação do Público-Alvo</li>
                         <li>Segmentos do Mercado</li>
                         <li>Participação Pretendida</li>
-                        <li>Comncorrência</li>
+                        <li>Concorrência</li>
                     </ul>
                 </div>
             </div>
