Endereço do IFSP, resumo edney e Kelly e título home

--- a/contato.html
+++ b/contato.html
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.6260895837604!2d-47.12942184910314!3d-22.853319184965564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8c75cee7fa559%3A0x71b08928ef35b47e!2sCentro+de+Tecnologia+da+Informa%C3%A7%C3%A3o+Renato+Archer+-+CTI!5e0!3m2!1spt-BR!2sbr!4v1467229324458" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></iframe>
                         </div>
                     </div>
 
@@ -111,10 +111,9 @@
                             <li class="col-sm-6">
                                 <address>
                                     <h5>Escritório</h5>
-                                    <p>Rua Nononon nonon 123 <br>
-                                    Matão, Campinas SP</p>
-                                    <p>Te.:19 3232.3232 <br>
-                                    Email contato@obeliscosoftware.com.br</p>
+                                    <p>Av. Comendador Aladino Selmi, s/no - Bairro Amarais<br>
+                                     Salas 25/27 - Prédio 4 do CTI Renato Archer</p>
+                                    <p>Campinas, SP - CEP 13069-901  <br>
                                 </address>
                             </li>
                         </ul>
