--- a/corpo_diretivo.html
+++ b/corpo_diretivo.html
@@ -202,9 +202,7 @@
 									</ul>
 									
 									<ul class="social_icons">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li> 
-										<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/arthurgeron"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div><!--/.media -->
@@ -232,9 +230,7 @@
 										<li class="btn"><a href="#">Consultoria</a></li>
 									</ul>
 									<ul class="social_icons">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li> 
-										<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/michel-maik-vicente-guimaraes-a5504546"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div><!--/.media -->
@@ -277,13 +273,11 @@
 										<li class="btn"><a href="#">Web</a></li>
 									</ul>
 									<ul class="social_icons">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li> 
-										<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/kelly-rodrigues-57ba8379"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div><!--/.media -->
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+							<p>Aluna do IFSP Câmpus Campinas, possui experiência como técnica de suporte, conhecimentos administrativos e financeiros.</p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -302,13 +296,11 @@
 										<li class="btn"><a href="#">Tester</a></li>
 									</ul>
 									<ul class="social_icons">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li> 
-										<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/edney-oliver-11b27450"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div><!--/.media -->
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+							<p>Aluno do IFSP Câmpus Campinas, tem experiência como Analista de Help Desk e Técnico de Informática, atualmente atua no mercado de trabalho na área de infra-estrutura e técnico de informática.</p>
 						</div>
 					</div>
 				</div>	<!--/.row-->
