--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>Empresa Júnior Obelisco Soluções em Software</h2>
-                <p class="lead"> Empresa júnior do IFSP Câmpus Campinas. Incentivando o espírito empreendendor nos alunos da instituição.
+                <p class="lead"> Empresa júnior do CURSO DE TECNOLOGIA EM ANÁLISE E DESENVOLVIMENTO DE SISTEMA DO Câmpus Campinas DO IFSP
 </p>
             </div>
 
