--- a/analise_swot.html
+++ b/analise_swot.html
@@ -106,11 +106,11 @@
                                 <h1>Forças</h1>
                                 <span>Strengths</span>
                             </li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
+                            <li>Empresas a procura de cortar gastos (Softwares antigos/obsoletos com alto custo de manutenção)</li>
+                            <li>Empresas a procura de otimizar processos( Procedimentos feitos manualmente ou através de softwares antigos)</li>
+                            <li>Empresas com necessidade de aumentar controle sobre processos
+</li>
+                            <li>Excepcional competência e motivação da equipe administrativa da Empresa Júnior Obelisco Soluções em Software</li>
                         </ul>
                     </div>
 
@@ -120,11 +120,13 @@
                                 <h1>Oportunidades</h1>
                                 <span>Opportunities</span>
                             </li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
+                            <li>Economia brasileira em crise ( necessidade de otimização de processos e corte de gastos)</li>
+                            <li>Criação de diferenciais em processos internos ou externos</li>
+                            <li>Alto índice de criação de startups no mercado </li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
                         </ul>
                     </div>
 
@@ -134,11 +136,12 @@
                                 <h1>Fraquezas</h1>
                                 <span>Weaknesses</span>
                             </li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
+                            <li>Empresas que já adaptaram seus procedimentos aos softwares obsoletos utilizados, tornando difícil uma transição deste para um novo software.</li>
+                            <li>Equipe nova na Empresa Júnior Obelisco Soluções em Software sujeita a mudanças</li>
+                            <li>Limitações de capacidade produtiva e financeira da Empresa Júnior Obelisco Soluções em Software
+</li>
+                            <li></li>
+                            <li></li>
                         </ul>
                     </div>
 
@@ -148,11 +151,7 @@
                                 <h1>Ameaças</h1>
                                 <span>Threats</span>
                             </li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
-                            <li>Texto</li>
+                            <li>Mercado saturado com empresas que fornecem serviços de Consultoria e Desenvolvimento de Software</li>
                         </ul>
                     </div>
 
